<resources>
    <string name="app_name">PreorderApp</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="signup">SignUp</string>
    <string name="new_user_register">New User? Register</string>
    <string name="login">Login</string>
    <string name="preorder">PreOrder</string>
    <string name="get_location">Get Location</string>
    <string name="dealer">Dealer</string>
    <string name="customer">Customer</string>
    <string-array name="businesstypes">
        <item>Restaurants</item>
        <item>Grocery Store</item>
    </string-array>
    <string name="title_activity_dealer_get_location">Map</string>
    <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>
    <string name="select_business_type">Select Business Type</string>
    <string name="title_activity_maps_try">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="example">Example</string>
    <string name="_9876543210">9876543210</string>
    <string name="example_mail_com">example@mail.com</string>
    <string name="name2">NAME :</string>
    <string name="email2">EMAIL :</string>
    <string name="phonenumber">PHONE :</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="feedback">Feedback</string>
    <string name="search">Search</string>
    <string name="view_map">View Map</string>
    <string name="booking">Booking</string>
    <string name="order">Order</string>
    <string name="sort">sort</string>
    <string name="continental">Continental</string>
    <string name="south_indian">South Indian</string>
    <string name="chinese">Chinese</string>
    <string name="pizza">Pizza</string>
    <string name="burger">Burger</string>
    <string name="unregistered_marker">unregistered marker</string>
    <string name="registered_marker">registered marker</string>
    <string name="registered_dealers">Registered Dealers</string>
    <string name="unregistered_dealers">Unregistered Dealers</string>
    <string name="current_location">current location</string>
    <string name="why_just_order_when_you_can_preorder">Why just order? When you can PreOrder</string>
    <string name="title_activity_admin">AdminActivity</string>
</resources>
