<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/BackgroundDeep"
    tools:context=".CustomerProfile.CustomerProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/Background"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/tvpreorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/preorder"
            android:textAlignment="center"
            android:background="@color/TextBackground"
            android:textSize="44sp"
            android:textColor="@color/Header"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/preorder"
            android:src="@drawable/preorderingapp" />

        <TextView
            android:id="@+id/tvdesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/why_just_order_when_you_can_preorder"
            android:textAlignment="center"
            android:textColor="#a65"
            android:textStyle="italic"/>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp" >

        <ImageView
            android:contentDescription="@string/preorder"
            android:id="@+id/ivlogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/food"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_alignParentTop="true">

            <EditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/shape_layout"
                android:drawableEnd="@drawable/ic_action_email"
                android:drawableRight="@drawable/ic_action_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/etemail"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_layout"
                android:drawableEnd="@drawable/ic_action_password"
                android:drawableRight="@drawable/ic_action_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1" />

            <Button
                android:id="@+id/bsignup"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/etpassword"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/button_state"
                android:text="@string/login"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvsignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bsignup"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/new_user_register"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressbarlogin"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/colorPrimary"
                android:visibility="invisible" />

        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>